Issue #3175662 by noonoos, hitvika_verma: The text form is not responsive

--- a/scss/components/form.scss
+++ b/scss/components/form.scss
@@ -15,6 +15,19 @@
     margin: 0 0.3em;
 }
 
+.form-row>fieldset,
+.form-row>div {
+  padding-right: 5px;
+  padding-left: 5px;
+  flex: 0 1 auto;
+  width: auto;
+  max-width: none;
+}
+
+.form-row .form-actions {
+  align-self: flex-end;
+}
+
 form .filter-wrapper {
     padding-left: 0;
     padding-right: 0;
